fixed h1 on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -177,3 +177,8 @@ hr {
    margin-right: 10px;
    margin-top: 0px;
 }
+@media only screen and (max-width: 1026px) {
+    .main {
+        margin-top: 5%;
+    }
+}
